Añadido comentario explicativo en index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Proyecto SDAW_3332</title>
 </head>
 <body>
+    <!-- Botón que muestra el mensaje de saludo -->
     <button id="saludoBtn">Mostrar saludo</button>
     <script src="script.js"></script>
 </body>
